# l1x-rpc

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
proto/: l1x_rpc_model.proto
src/: json.rs  lib.rs  primitives.rs  transaction.rs
